Submit button corrections - removed auto capitalization - fixed issues with user control alignment - refactored markup to resolve issues with recaptcha

--- a/sass/blocks/default/components/common.scss
+++ b/sass/blocks/default/components/common.scss
@@ -165,16 +165,16 @@
 			width: 100%;
 			margin-bottom: 1.2em;
 
-			.wp-block-button {
-				display: flex;
-				flex-direction: column;
-				align-items: end;
-				gap: 8px;
+			// .wp-block-button {
+			// 	display: flex;
+			// 	flex-direction: column;
+			// 	align-items: end;
+			// 	gap: 8px;
 
-				.srfm-submit-button {
-					width: fit-content;
-				}
-			}
+			// 	.srfm-submit-button {
+			// 		width: fit-content;
+			// 	}
+			// }
 
 			&.hide {
 				display: none;
